--- a/index.html
+++ b/index.html
@@ -8,25 +8,80 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+
     <nav>
         <div class="logo">FORMEN</div>
         <div class="menu">
             <a href="#home">Inicio</a>
             <a href="#latest">Último Lanzamiento</a>
+            <a href="#music">Música</a>
+            <a href="#about">Sobre Mí</a>
             <a href="#contact">Contacto</a>
+        </div>
+        <div class="menu-btn">
+            <div class="menu-btn__burger"></div>
         </div>
     </nav>
 
+    <div class="mobile-menu">
+        <a href="#home">Inicio</a>
+        <a href="#latest">Último Lanzamiento</a>
+        <a href="#music">Música</a>
+        <a href="#about">Sobre Mí</a>
+        <a href="#contact">Contacto</a>
+    </div>
+
     <section id="home" class="hero">
-        <h1 class="animate-text">FORMEN</h1>
-        <p class="animate-fade">Música que trasciende</p>
+        <div class="hero-content">
+            <h1 class="animate-text">FORMEN</h1>
+            <p class="animate-fade">Música que trasciende</p>
+            <div class="scroll-indicator">
+                <div class="mouse"></div>
+                <p>Scroll Down</p>
+            </div>
+        </div>
+        <div class="hero-background"></div>
     </section>
 
     <section id="latest" class="latest-release">
         <h2>Último Lanzamiento</h2>
         <div class="spotify-container">
             <div id="latest-track" class="track-info">
-                <div class="loading">Cargando...</div>
+                <div class="loading">
+                    <div class="loading-spinner"></div>
+                    <p>Cargando...</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="music" class="music-section">
+        <h2>Mi Música</h2>
+        <div id="top-tracks" class="tracks-grid">
+            <div class="loading">
+                <div class="loading-spinner"></div>
+                <p>Cargando top tracks...</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about-section">
+        <div class="about-content">
+            <h2>Sobre Mí</h2>
+            <div class="about-text">
+                <p class="reveal-text">Soy Formen, un artista musical dedicado a crear experiencias únicas a través del sonido. Mi música es una mezcla de géneros que busca conectar con las emociones más profundas del oyente.</p>
+            </div>
+            <div class="stats">
+                <div class="stat-item">
+                    <span id="monthly-listeners">-</span>
+                    <p>Oyentes Mensuales</p>
+                </div>
+                <div class="stat-item">
+                    <span id="followers">-</span>
+                    <p>Seguidores</p>
+                </div>
             </div>
         </div>
     </section>
@@ -34,19 +89,30 @@
     <section id="contact" class="contact">
         <h2>Contacto</h2>
         <div class="contact-info">
-            <a href="https://instagram.com/catadorproo" target="_blank">
+            <a href="https://instagram.com/catadorproo" target="_blank" class="social-link">
                 <i class="fab fa-instagram"></i>
-                @catadorproo
+                <span>@catadorproo</span>
             </a>
-            <a href="mailto:formen@duck.com">
+            <a href="mailto:formen@duck.com" class="social-link">
                 <i class="far fa-envelope"></i>
-                formen@duck.com
+                <span>formen@duck.com</span>
             </a>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Formen. Todos los derechos reservados.</p>
+        <div class="footer-content">
+            <div class="footer-logo">FORMEN</div>
+            <div class="footer-social">
+                <a href="https://open.spotify.com/artist/0O202ZSWYbhYQZqpmd4y8d" target="_blank">
+                    <i class="fab fa-spotify"></i>
+                </a>
+                <a href="https://instagram.com/catadorproo" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+            <p>&copy; 2024 Formen. Todos los derechos reservados.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
